<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingTop="2dp"
    android:paddingBottom="2dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Scheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scheme_name" />

                <TextView
                    android:id="@+id/Type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_name" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Scheme_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scheme_visa"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Type_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/Brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_name" />

                <TextView
                    android:id="@+id/Prepaired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prepaired_name" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Brand_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:maxLines="2"
                    android:text="@string/brand"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Prepaired_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prepaired"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/CardNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardnumber" />

                <TextView
                    android:id="@+id/Country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/county_name" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/Length"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="0dp"
                            android:paddingEnd="4dp"
                            android:text="@string/length_name" />

                        <TextView
                            android:id="@+id/Luhn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/luhn_name" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/Length_i"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cardlength"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/Luhn_i"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/luhn"
                            android:textStyle="bold" />
                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Country_i"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoSizeTextType="uniform"
                        android:text="@string/country"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Coordinates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/coordinates" />
                </LinearLayout>

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_name" />

            <TextView
                android:id="@+id/Bank_i"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:autoText="false"
                android:maxLines="2"
                android:text="@string/bank"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:autoSizeTextType="uniform"
                android:focusable="false"
                android:text="@string/url"
                android:textColor="#0547B3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/phone_name" />

            <TextView
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/phone"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>